[package]
name = "sonogram"
description = "A spectrograph utility written in Rust"
version = "0.5.0"
authors = ["Simon M. Werner <simonwerner@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
edition = "2018"
repository = "https://github.com/psiphi75/sonogram"
keywords = ["spectrogram", "spectrograph", "audio", "fft", "dft"]
categories = ["multimedia::images", "science", "multimedia::audio", "visualization"]


[dependencies]
hound = "3.4"
clap = { version = "3.0.14", features = ["derive"] }
png = "0.14"
csv = "1.1"
rustfft = "6.0"
resize = "0.7.2"
rgb = "0.8.25"