[package]
name = "sonogram"
description = "A spectrograph utility written in Rust"
version = "0.7.3"
authors = ["Simon M. Werner <simonwerner@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
edition = "2021"
repository = "https://github.com/psiphi75/sonogram"
keywords = ["spectrogram", "spectrograph", "audio", "fft", "dft"]
categories = ["multimedia::images", "science", "multimedia::audio", "visualization"]

[features]
default = [ "hound", "png", "rayon" ]
build-binary = ["clap"]
rayon = ["dep:rayon", "resize/rayon"]

[[bin]]
name = "sonogram"
required-features = ["build-binary"]

[dependencies]
hound = { version = "3.4", optional = true }
clap = { version = "3.0.14", features = ["derive"], optional = true }
png = { version = "0.14", optional = true }
csv = "1.1"
rustfft = "6.0"
resize = { version = "0.8.0", default-features = false }
rgb = "0.8.25"
rayon = { version = "1.7.0", optional = true }
num-traits = "0.2.19"
